--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="stylesheet"  href="./assets/pico.fluid.classless.scss"> -->
 </head>
 <body>
   <app-root></app-root>
-  <p>Hola Juanito.</p>
-
 </body>
 </html>
